// SPDX-FileCopyrightText: Â© 2021 ChiselStrike <info@chiselstrike.com>

syntax = "proto3";

package chisel;

message StatusRequest { }

message StatusResponse {
  string server_id = 2;
  string message = 1;
}

message AddTypeRequest {
  string name = 1;
  repeated FieldDefinition field_defs = 2;
}

message VersionDefinition {
  string version_id = 1;
  repeated TypeDefinition type_defs = 2;
  repeated LabelPolicyDefinition label_policy_defs = 4;

  // deprecated: endpoints/routes can be introspected only from JavaScript
  //repeated EndpointDefinition endpoint_defs = 3;
  reserved 3;
  reserved "endpoint_defs";
}

message TypeDefinition {
  string name = 1;
  repeated FieldDefinition field_defs = 2;
}

message FieldDefinition {
  string name = 1;
  TypeMsg field_type = 2;
  repeated string labels = 3;
  bool is_optional = 4;
  optional string default_value = 5;
  bool is_unique = 6;
}

message TypeMsg {
  oneof type_enum {
    bool string = 1;
    bool number = 2;
    bool bool = 3;
    string entity = 4;
    ContainerType array = 5;
  };
}

message ContainerType {
  TypeMsg value_type = 1;
}

message EndpointDefinition {
  string path = 1;
}

message LabelPolicyDefinition {
  string label = 1;
}

message DescribeRequest {
}

message DescribeResponse {
  repeated VersionDefinition version_defs = 1;
}

message PolicyUpdateRequest {
  string policy_config = 1;
  string path = 3;
}

message Module {
  string url = 1;
  string code = 2;
}

message ApplyRequest {
   string version_id = 5;

   repeated AddTypeRequest types = 1;
   repeated IndexCandidate index_candidates = 8;
   repeated PolicyUpdateRequest policies = 3;
   repeated Module modules = 9;

   bool allow_type_deletion = 4;
   string version_tag = 6;
   string app_name = 7;

   // deprecated: source code is passed in `modules`
   //map<string, string> sources = 2;
   reserved 2;
   reserved "sources";
}

message ApplyResponse {
  repeated string types = 1;
  repeated string labels = 3;
  repeated string event_handlers = 4;

  // deprecated: endpoints/routes can be introspected only from JavaScript
  //repeated string endpoints = 2;
  reserved 2;
  reserved "endpoints";
}

message DeleteRequest {
   string version_id = 1;
}

message DeleteResponse {
   string message = 1;
}

message PopulateRequest {
    string to_version_id = 1;
    string from_version_id = 2;
}

message PopulateResponse {
    string message = 1;
}

message IndexCandidate {
    string entity_name = 1;
    repeated string properties = 2;
}

service ChiselRpc {
  rpc GetStatus (StatusRequest) returns (StatusResponse);
  rpc Apply (ApplyRequest) returns (ApplyResponse);
  rpc Populate (PopulateRequest) returns (PopulateResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
  rpc Describe (DescribeRequest) returns (DescribeResponse);
}
